changed build settings

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/InvertebrateWebBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/InvertebrateWebBuild.data.br",
-        frameworkUrl: buildUrl + "/InvertebrateWebBuild.framework.js.br",
-        codeUrl: buildUrl + "/InvertebrateWebBuild.wasm.br",
+        dataUrl: buildUrl + "/InvertebrateWebBuild.data.unityweb",
+        frameworkUrl: buildUrl + "/InvertebrateWebBuild.framework.js.unityweb",
+        codeUrl: buildUrl + "/InvertebrateWebBuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Invertebrate",
